--- a/app/views/soccer_programs/_nonfull.html.erb
+++ b/app/views/soccer_programs/_nonfull.html.erb
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="col-md-6 col-sm-6">
           <figure class="event-figure">
-            <a href="03-enstruct-events-list-fullwidth.html#" class=" image-effect">
+            <a href="#" class=" image-effect">
             <%= image_tag "enstruct_layout/player.png" ,alt: "Event" %>
             </a>
           </figure>
