--- a/app/views/wffull_days/wffull_payment.html.erb
+++ b/app/views/wffull_days/wffull_payment.html.erb
@@ -1,3 +1,25 @@
+<% content_for :banner_content do %>
+  <div class="main-banner banner-holder inner-banner">
+    <div class="fixed-banner event-banner">
+      <div class="banner-text">
+        <div class="container">
+          <div class="content">
+            <div class="inner text-center">
+              <div class="main-title mb-0 ">
+                <h2 class="mb-0">WFF MEMBERS REGISTRATION</h2>
+              </div>
+              <!--title-->
+            </div>
+            <!--inner-->
+          </div>
+        </div>
+      </div>
+      <!--banner text-->
+    </div>
+  </div>
+  <!--banner ends-->
+<% end %>
+
 <div class="container" style="
     margin-top: 100px; margin-bottom: 50px;">
   <div class="form-row">
