--- a/app/views/wffhalf_days/wffhalf_payment.html.erb
+++ b/app/views/wffhalf_days/wffhalf_payment.html.erb
@@ -2,12 +2,14 @@
     margin-top: 100px; margin-bottom: 50px;">
   <div class="form-row">
 <div id="content">
-  <% flash.each do |name, msg| %>
-          <div class="alert alert-success fade in">
+  
+ 
+  <%# flash.each do |name, msg| %>
+         <!--  <div class="alert alert-success fade in">
         <a href="#" class="close" data-dismiss="alert">&times;</a>
         <strong><%=msg%></strong>
-      </div>
-        <% end %>
+      </div> -->
+        <%# end %>
 <%= simple_form_for @subscription do |f| %>
   <div class="container change-container center_div">
   <div class="tab-pane" id="tab5">
