--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,21 +32,17 @@
   </head>
 
   <body>
-   
-  
     <%= render 'layouts/header' %>
-     
-   
     <%= yield :banner_content %>
-
     <main>
+     <%= render 'layouts/error_messages' %>
       <%= yield %>
     </main>
+
     <%= render 'layouts/footer' %>
-    <%= yield :after_footer %>
-    <%= javascript_include_tag "https://js.stripe.com/v1/", "application" %>
-     <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
-   
     
+    <%= yield :after_footer %> 
+    <%= javascript_include_tag "https://js.stripe.com/v2/", "application" %>
+     <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
   </body>
 </html>
