--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -53,7 +53,7 @@
             former professional players that will be in attendance to help with
             the individual player development..
           </h4>
-          <a href="#" class="btn btn-lg text-uppercase bg-yellow">Register  Today!</a>
+          <%= link_to "Register Today", new_user_registration_path, :class => "btn btn-lg text-uppercase bg-yellow" %>
         </div>
       </div>
       <!--top-->
